# pico-ioc

./: .coberagerc  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile.test  Makefile  PLAN.md  README.MD  README.md  SECURITY.md  manage.sh  mkdocs.yml  pyproject.toml  test.txt  tox.ini
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml  docs.yml  publish-to-pypi.yml  sync-keywords.yml
.llm/: ARCHITECTURE.md  DECISIONS.md  GUIDE.md  GUIDE_CREATING_PLUGINS_AND_INTERCEPTORS.md  OVERVIEW.md
.llm/FEATURES/: FEATURE-2025-0001-scope-subgraphs.md  FEATURE-2025-0002-autoscan.md  FEATURE-2025-0003-autoscan.md  FEATURE-2025-0003-interceptor-auto-registration.md  FEATURE-2025-0005-dianostics.md  FEATURE-2025-0006-infraestructure.md  FEATURE-2025-0007-infra-binding.md  FEATURE-2025-0008-advanced-dsl.md  FEATURE-2025-0009-role.md  FEATURE-2025-0010-dynamic-container.md  FEATURE-2025-0011-external-dynamic-conf.md
.prompts/: prompt.txt  prompt_git.txt
coverage/coverage-html (1)/: class_index.html  function_index.html  index.html  status.json  z_0118e32fb2a30847___init___py.html  z_0118e32fb2a30847_analysis_py.html  z_0118e32fb2a30847_aop_py.html  z_0118e32fb2a30847_api_py.html  z_0118e32fb2a30847_component_scanner_py.html  z_0118e32fb2a30847_config_builder_py.html  z_0118e32fb2a30847_config_registrar_py.html  z_0118e32fb2a30847_config_runtime_py.html  z_0118e32fb2a30847_constants_py.html  z_0118e32fb2a30847_container_py.html  z_0118e32fb2a30847_decorators_py.html  z_0118e32fb2a30847_dependency_validator_py.html  z_0118e32fb2a30847_event_bus_py.html  z_0118e32fb2a30847_exceptions_py.html  z_0118e32fb2a30847_factory_py.html  z_0118e32fb2a30847_locator_py.html  z_0118e32fb2a30847_provider_selector_py.html  z_0118e32fb2a30847_registrar_py.html  z_0118e32fb2a30847_scope_py.html
doc4llm/: architecture-pico-ioc.md  usage-patterns.md
docs/: LEARN.md  README.md  ai-ready.md  faq.md  getting-started.md  llms.txt  migration.md  overview.md  requirements.txt  skills.md  troubleshooting.md
docs/adr/: README.md  adr-0001-async-native.md  adr-0002-tree-based-configuration.md  adr-0003-context-aware-scopes.md  adr-0004-observability.md  adr-0005-aop.md  adr-0006-eager-validation.md  adr-0007-event_bus.md  adr-0008-circular-dependencies.md  adr-0009-flexible-provides.md  adr-0010-unified-configuration.md  adr-0011-custom-scanners.md  adr-0012-resolution-path-in-errors.md  adr-0013-hot-config-refresh.md
docs/advanced-features/: README.md  aop-interceptors.md  aop-proxies.md  async-resolution.md  conditional-binding.md  custom-scanners.md  event-bus.md  self-injection.md
docs/api-reference/: README.md  analysis-api.md  constants.md  container-context-api.md  container.md  decorators.md  event_bus.md  exceptions.md  glossary.md  protocols.md  provider-selector.md
docs/architecture/: README.md  comparison.md  design-principles.md  docs-assets.md  internals.md  philosophy.md  runtime-model-scheduling.md
docs/cookbook/: README.md  pattern-aop-security.md  pattern-aop-structured-logging.md  pattern-cli-app.md  pattern-config-overrides.md  pattern-cqrs.md  pattern-hot-reload.md
logo/: pico-ioc.html
releases/: v2.2.3.md
src/: pico_ioc.py
tests/: conftest.py  test_aop.py  test_aop_coverage.py  test_aop_extended.py  test_api.py  test_api_unit.py  test_api_unit_extended.py  test_bugfixes_v221.py  test_collection_injection.py  test_config_builder.py  test_config_expand_env.py  test_config_refresh.py  test_config_registrar_coverage.py  test_config_runtime_coverage.py  test_config_value.py  test_configured.py  test_container_context.py  test_container_coverage.py  test_container_coverage_boost.py  test_container_extended.py  test_container_integrated_coverage.py  test_container_lifecycle_interceptors.py  test_container_runtime.py  test_container_self_injection.py  test_container_unit_extended.py  test_coverage_boost_v2.py  test_custom_scanner.py  test_decorators_and_policy.py  test_error_contracts.py  test_event_bus.py  test_event_bus_coverage_boost.py  test_event_bus_extended.py  test_fingerprint_public.py  test_future_annotations.py  test_interceptors_autoreg.py  test_interceptors_smoke.py  test_locator.py  test_pico_extends.py  test_pico_integration.py  test_pico_ioc.py  (+12 more)
(+62 files in other folders)
