[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pico-ioc"
version = "0.1.0"
authors = [
  { name="David Perez Cabrera", email="dperezcabrera@gmail.com" },
  { name="Gemini 2.5-Pro" },
]
description = "A minimalist, zero-dependency Inversion of Control (IoC) container for Python."
readme = "README.md"
requires-python = ">=3.8"
license = { file="LICENSE" }
keywords = ["ioc", "di", "dependency injection", "inversion of control", "decorator"]

classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Object Brokering",
]

[project.urls]
"Homepage" = "https://github.com/dperezcabrera/pico-ioc"
"Bug Tracker" = "https://github.com/dperezcabrera/pico-ioc/issues"
