[build-system]
requires = ["setuptools>=69.0", "wheel", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pico-ioc"
dynamic = ["version"]
authors = [{ name = "David Perez Cabrera", email = "dperezcabrera@gmail.com" }]
description = "A minimalist, zero-dependency Inversion of Control (IoC) container for Python."
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.11"
license = { file = "LICENSE" }
keywords = [
"python",
    "ioc",
    "dependency-injection",
    "di-container",
    "inversion-of-control",
    "ioc-container",
    "zero-dependency",
    "minimalistic",
    "async",
    "asyncio",
    "modular",
    "pluggable",
    "ioc-framework",
    "ioc-containers",
    "inversion-of-control-container"
]

classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Framework :: AsyncIO",
  "Typing :: Typed",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

[project.optional-dependencies]
yaml = ["PyYAML"]
graphviz = ["graphviz"]  

[project.urls]
Homepage = "https://github.com/dperezcabrera/pico-ioc"
Documentation = "https://dperezcabrera.github.io/pico-ioc/"
Repository = "https://github.com/dperezcabrera/pico-ioc"
Changelog = "https://github.com/dperezcabrera/pico-ioc/blob/main/CHANGELOG.md"
"Issue Tracker" = "https://github.com/dperezcabrera/pico-ioc/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["pico_ioc*"]

[tool.setuptools_scm]
version_scheme = "post-release"
local_scheme = "no-local-version"
fallback_version = "2.2.0"
write_to = "src/pico_ioc/_version.py"
write_to_template = "__version__ = '{version}'\n"

[tool.ruff]
target-version = "py311"
line-length = 120
src = ["src", "tests"]

[tool.ruff.lint]
preview = true
select = ["E", "F", "I", "UP", "C901", "PLR1702"]
ignore = [
    "E501",   # line-too-long — revisable later
    "E701",   # multiple-statements-on-one-line
    "E721",   # type-comparison — intentional in some checks
    "E731",   # lambda-assignment
    "F401",   # unused-import — many intentional re-exports across modules
    "F811",   # redefined-while-unused — intentional shadowing in api.py init()
    "UP006",  # non-pep585-annotation — gradual migration
    "UP007",  # non-pep604-annotation-union — gradual migration
    "UP035",  # deprecated-import — gradual migration from typing
    "UP045",  # non-pep604-annotation-optional — gradual migration
]

[tool.ruff.lint.mccabe]
max-complexity = 12

[tool.ruff.lint.pylint]
max-nested-blocks = 4

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["F841"]  # unused-variable — common in test setup

[tool.ruff.format]
quote-style = "double"


